# migrator

./: Anchor.toml  README.md  package.json  shell.nix  tsconfig.build.json  tsconfig.json
.github/workflows/: nix.yml  programs.yml  release.yml  rust.yml
programs/migrator/: Cargo.toml  README.md
programs/migrator/src/: account_contexts.rs  account_validators.rs  bpf_loader_upgradeable.rs  lib.rs  macros.rs  migrate.rs  state.rs
programs/migrator/src/instructions/: approver.rs  mod.rs  public.rs
src/: index.ts  pda.ts  sdk.ts  types.ts  wrapper.ts
tests/: migrator.spec.ts
